# ferrino

./: Cargo.toml  README.md
examples/.cargo/: config.toml
examples/blinky/: Cargo.toml  README.md
examples/blinky/.cargo/: config.toml
examples/blinky/src/: main.rs
examples/button/: Cargo.toml
examples/button/src/: main.rs
examples/network/: Cargo.toml  build.rs
examples/network/src/: main.rs
ferrino/: Cargo.toml  build.rs
ferrino-cli/: Cargo.toml
ferrino-cli/src/: main.rs
ferrino-macros/: Cargo.toml
ferrino-macros/src/: lib.rs
ferrino-macros/src/macros/: main.rs  task.rs
ferrino/src/: lib.rs
ferrino/src/boards/microbit/: memory.x  mod.rs
ferrino/src/boards/rpi-pico/: mod.rs
ferrino/src/boards/rpi-pico-w/: mod.rs
