[package]
name = "ferrino"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "1.0.0-alpha.9"
embedded-hal-async = "0.1.0-alpha.3"
embedded-nal-async = "0.2.0"
embassy-nrf = { version = "0.1.0", optional = true }

[features]
# Supported boards
"board+microbit" = ["embassy-nrf/nrf52833"]

