[package]
name = "ferrino"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "1.0.0-alpha.9"
embedded-hal-async = "0.2.0-alpha.0"
embedded-nal-async = "0.4.0"
ferrino-macros = { path = "../ferrino-macros" }
embassy-executor = { version = "0.1.0", path = "../../embassy/embassy-executor" }
cfg-if = "1.0.0"
cortex-m-rt = "0.7"
embassy-nrf = { version = "0.1.0", path = "../../embassy/embassy-nrf", features = ["nightly", "unstable-traits", "gpiote"], optional = true }

[features]
# Supported boards
"board+microbit" = ["embassy-nrf/nrf52833"]

