[package]
name = "ferrino"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "1.0.0-alpha.9"
embedded-hal-async = "0.2.0-alpha.0"
embedded-nal-async = "0.4.0"
ferrino-macros = { path = "../ferrino-macros" }
embassy-executor = { version = "0.1.0", path = "../../embassy/embassy-executor", features = ["integrated-timers", "nightly"] }
cfg-if = "1.0.0"
cortex-m-rt = "0.7"
cortex-m = "0.7"
embassy-nrf = { version = "0.1.0", path = "../../embassy/embassy-nrf", features = ["nightly", "unstable-traits", "gpiote", "time-driver-rtc1"], optional = true }
embassy-rp = { version = "0.1.0", path = "../../embassy/embassy-rp", features = ["nightly", "unstable-traits", "time-driver", "critical-section-impl"], optional = true }
embassy-time = { version = "0.1.0", path = "../../embassy/embassy-time" }
embassy-net = { version = "0.1.0", path = "../../embassy/embassy-net", features = ["dhcpv4", "tcp", "medium-ethernet", "dns", "unstable-traits", "nightly"], optional = true }
embassy-net-driver-channel = { version = "0.1.0", path = "../../embassy/embassy-net-driver-channel", optional = true }
embassy-net-driver = { version = "0.1.0", path = "../../embassy/embassy-net-driver", optional = true }
embassy-usb-logger = { version = "0.1.0", path = "../../embassy/embassy-usb-logger" }
cyw43 = { version = "0.1.0", path = "../../cyw43", features = ["defmt"], optional = true }
static_cell = "1"
log = "0.4"
defmt = "0.3"

[features]
# Supported boards
"board+microbit" = ["embassy-nrf/nrf52833", "cortex-m/critical-section-single-core"]
"board+rpi-pico" = ["embassy-rp"]
"board+rpi-pico-w" = ["embassy-rp", "cyw43", "embassy-net", "embassy-net-driver-channel", "embassy-net-driver"]
