[package]
name = "blinky"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
ferrino = { path = "../../ferrino" }
embedded-hal = "1.0.0-alpha.9"
embedded-nal-async = "0.4.0"
defmt = "0.3"
defmt-rtt = "0.4"
panic-reset = "0.1.1"

[patch.crates-io]
embassy-executor = { path = "../../../embassy/embassy-executor" }
embassy-net = { path = "../../../embassy/embassy-net" }
embassy-net-driver-channel = { path = "../../../embassy/embassy-net-driver-channel" }
embassy-net-driver = { path = "../../../embassy/embassy-net-driver" }
